<resources>
    <string name="app_name">Auto-Garcon</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="search_hint">Type name…</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="current_order">"Current Order"</string>
    <string name="in_progress">"In Progress"</string>
    <string name="completed">"Completed"</string>
    <string name="order_button">"Order Items"</string>
    <string name="nothing_here">"Nothing to see here..."</string>
    <string name="clear_order_button">"Clear Order"</string>
    <string name="payments_show_name">Successfully received payment data for %s!</string>
    <string name="api">https://autogarcon.live/api/</string>
    <string name="sign_out">Sign Out</string>
    <string name="view_account">View Account</string>
    <string name="display_settings">Display</string>
    <string name="setting_colorblind">Colorblind Mode</string>
    <string name="allergens">Allergens</string>
    <string name="meat">Meat</string>
    <string name="dairy">Dairy</string>
    <string name="nuts">Nuts</string>
    <string name="gluten">Gluten</string>
    <string name="soy">Soy</string>
    <string name="favorite_restaurants">Favorite Restaurants</string>
    <string name="preferences">Preferences</string>
    <string name="add_current_restaurant">Add Current Restaurant</string>
</resources>
