<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:title="Search"
        app:showAsAction="always"
        app:actionViewClass="android.widget.SearchView"
        />
    <item
        android:icon="@drawable/ic_filter_list"
        android:title="filtering"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/meat_filter"
                android:title="@string/meat"
                app:showAsAction="never"
                android:checkable="true"
                android:checked="true"
                />
            <item
                android:id="@+id/dairy_filter"
                android:title="@string/dairy"
                app:showAsAction="never"
                android:checkable="true"
                android:checked="true"
                />
            <item
                android:id="@+id/nuts_filter"
                android:title="@string/nuts"
                app:showAsAction="never"
                android:checkable="true"
                android:checked="true"
                />
            <item
                android:id="@+id/gluten_filter"
                android:title="@string/gluten"
                app:showAsAction="never"
                android:checkable="true"
                android:checked="true"
                />
            <item
                android:id="@+id/soy_filter"
                android:title="@string/soy"
                app:showAsAction="never"
                android:checkable="true"
                android:checked="true"
                />
        </menu>
    </item>
</menu>