<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserOptionsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="true"
            android:elevation="@dimen/activity_horizontal_margin"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/user_options_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="8dp"
                android:scaleType="fitCenter"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/user_options_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/colorGray"
                tools:text="User Name" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/sign_out" />

                <Button
                    android:id="@+id/button3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/view_account" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:padding="8dp"
            android:text="@string/display_settings"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <com.google.android.material.chip.ChipGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            app:chipSpacing="4dp">

            <CheckBox
                style="@style/Widget.AppCompat.CompoundButton.CheckBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:padding="8dp"
                android:text="@string/setting_colorblind"
                android:textSize="14sp" />
        </com.google.android.material.chip.ChipGroup>

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:padding="8dp"
            android:text="@string/allergens"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <com.google.android.material.chip.ChipGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            app:chipSpacing="4dp">

            <CheckBox
                style="@style/Widget.AppCompat.CompoundButton.CheckBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:padding="8dp"
                android:text="@string/meat"
                android:textSize="14sp" />

            <CheckBox
                android:id="@+id/checkBox2"
                style="@style/Widget.AppCompat.CompoundButton.CheckBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:padding="8dp"
                android:text="@string/dairy"
                android:textSize="14sp" />

            <CheckBox
                android:id="@+id/checkBox4"
                style="@style/Widget.AppCompat.CompoundButton.CheckBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:padding="8dp"
                android:text="@string/nuts"
                android:textSize="14sp" />

            <CheckBox
                android:id="@+id/checkBox5"
                style="@style/Widget.AppCompat.CompoundButton.CheckBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:padding="8dp"
                android:text="@string/gluten"
                android:textSize="14sp" />

            <CheckBox
                android:id="@+id/checkBox3"
                style="@style/Widget.AppCompat.CompoundButton.CheckBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:padding="8dp"
                android:text="@string/soy"
                android:textSize="14sp" />

        </com.google.android.material.chip.ChipGroup>

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:padding="8dp"
            android:text="@string/favorite_restaurants"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/user_options_restaurant_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:itemCount="14"
            tools:listitem="@layout/list_restaurant" />
    </LinearLayout>
</ScrollView>